--- a/dev/todo.txt
+++ b/dev/todo.txt
@@ -1,1 +1,5 @@
-TODO: recheck all stealth plugin injections
+TODO: Remove unused code
+TODO: Renamed plugins appropriately
+TODO: Rename/Reallocate tests
+TODO: Rename weird _2 in TwoCaptcha service
+TODO: Update docs
