--- a/Tests/Properties/Resources.resx
+++ b/Tests/Properties/Resources.resx
@@ -135,4 +135,7 @@
   <data name="TwoCaptchaKey" xml:space="preserve">
     <value />
   </data>
+  <data name="CapSolverKey" xml:space="preserve">
+    <value />
+  </data>
 </root>
